# pr-reviewer-plugin

./: .gitignore  CLAUDE.md  README.md  __init__.py  app_auth.py  approve.py  checkout_cache.py  chokepoint.py  dispatch.py  eval.py  gh_cli.py  grounding.py  protoagent.plugin.yaml  protopatch.py  pyproject.toml  replay.py  replay_cli.py  requirements-dev.txt  rounds.py  subagents.py  summon.py  telemetry.py  threads.py  trigger.py  verdicts.py  webhook.py
.github/workflows/: ci.yml
tests/: conftest.py  test_app_auth.py  test_approve.py  test_checkout_cache.py  test_chokepoint.py  test_dispatch.py  test_grounding.py  test_mapping.py  test_recipe.py  test_register.py  test_replay.py  test_rounds.py  test_runner.py  test_summon.py  test_threads.py  test_trigger.py  test_verdicts.py  test_version.py  test_webhook.py
workflows/: code-review-structural.yaml
